--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,11 +4,13 @@ import Button from "../components/ui/Button.astro"
 import SearchBar from "../components/ui/SearchBar.astro"
 import BoxColor from "../components/ui/BoxColor.astro"
 import ColorSection from "../components/ui/ColorSection.astro"
+import BoxColorButton from "../components/ui/BoxColorButton.astro"
 
 ---
 <BaseLayout title="GirlTalk">
 	<section>
 		<h1 class="primary-header">Du er altid god nok</h1>
 		<h2 class="subheader">... men vi er her, når du bliver i tvivl</h2>
+		<BoxColorButton subheader="Vi sidder klar til at hjælpe dig" title="Har du tanker, der fylder?" color="purple" text="Start anonym chat"/>
 	</section>
 	</BaseLayout>
