--- a/src/pages/main.astro
+++ b/src/pages/main.astro
@@ -1,6 +1,7 @@
 ---
 import GirlsUniLayout from "../layouts/GirlsUniLayout.astro";
 import QuoteSection from "../components/ui/QuoteSection.astro";
+import BoxColorButton from "../components/ui/BoxColorButton.astro"
 
 ---
 <GirlsUniLayout title="Pigeunivers">
@@ -10,7 +11,7 @@ import QuoteSection from "../components/ui/QuoteSection.astro";
 
 <QuoteSection color="pink" firstLine="Man føler sig ikke alene med de ting" secondLine="man kæmper med, når andre fortæller," thirdLine="de har det på samme måde"></QuoteSection>
 
-
+<BoxColorButton color="purple" title="Du er aldrig alene med dine tanker" subheader="Har du nogle tanker, du har brug for at få ud af hovedet, så de fylder mindre?" text="Skriv til brevkassen"></BoxColorButton>
 
 	</GirlsUniLayout>
 	<style>
