--- a/src/components/cards/ArticleCard.astro
+++ b/src/components/cards/ArticleCard.astro
@@ -15,12 +15,12 @@ div.ArticleCard {
     display: flex;
     flex-direction: column;
     gap: var(--spacing-xs);
-    width: 220px;
+    width: auto;
+    height:auto;
 }
 
 .ArticleCard img{
-    height: 280px;
-    width: fit-content;
+    width: 100%;
     border-radius: 8px;
 }
 
