--- a/src/components/cards/Category.astro
+++ b/src/components/cards/Category.astro
@@ -7,7 +7,8 @@ const { category, header  } = Astro.props;
 </div>
 
 <style>
-p {
+.Category p {
+    max-width: 200px;
     margin-bottom: 5px;
 }
 </style>
