--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -187,7 +187,7 @@ a {
   }
 
   .quote-light {
-    font-size: var(--font-size-large);
+    font-size: var(--font-size-xl);
     font-weight: var(--font-weight-light);
   }
 
