om os fix ups, faq added links

--- a/src/pages/faq.astro
+++ b/src/pages/faq.astro
@@ -29,13 +29,13 @@ import BaseLayout from "../layouts/BaseLayout.astro";
           alders- og målgrupper.
         </p>
         <ul>
-          <li>Vi rådgiver unge på chat, sms og i vores brevkasse Pigetanker</li>
+          <li>Vi rådgiver unge på <a href="chat.html">chat</a>, sms og i vores <a href="brevkasse.html">brevkasse</a></li>
           <li>Vi holder foredrag for både unge, forældre og fagpersoner.</li>
           <li>
             Vi faciliterer fysiske tilbud i form af vores gruppeforløb
-            Sisterhood og EmpowR.
+            <a href="frivillig.html">Sisterhood og EmpowR.</a>
           </li>
-          <li>Herudover rådgiver vi også forældre i vores voksenrådgivning.</li>
+          <li>Herudover rådgiver vi også forældre i vores <a href="foraeldre.html">voksenrådgivning</a>.</li>
         </ul>
       </details>
       <details>
@@ -43,7 +43,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
           <span class="subheader">Hvem arbejder i Girltalk?</span>
         </summary>
         <p>
-          GirlTalks sekretariat er fordelt over tre lokalafdelinger i hhv.
+          <a href="#">GirlTalks sekretariat</a> er fordelt over tre lokalafdelinger i hhv.
           København, Aalborg og Odense. GirlTalk har medarbejdere med flere
           forskellige baggrunde og fagligheder, hvoraf mange er uddannet inden
           for psykologi, pædagogik samt kommunikation og marketing. <br />
@@ -60,7 +60,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
         </summary>
         <p>
           Finder du ikke svaret på det, du søger, i vores FAQ, er du velkommen
-          til at kontakte os på info@girltalk.dk med henblik på mere info og et
+          til at kontakte os på <a href="mailto:info@girltalk.dk">info@girltalk.dk</a> med henblik på mere info og et
           eventuelt interview med en af vores medarbejdere. I særlige tilfælde
           kan vi også være kontaktled imellem studerende og vores frivillige. <br
           />
@@ -100,7 +100,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
           />
           <br />
           Hvis du ønsker at høre mere om nogle af disse emner, anbefaler vi dig at
-          lytte til vores ungepodcast GirlTalks. Her kan du finde afsnit, der tager
+          lytte til vores <a href="https://open.spotify.com/show/15oq5yztN1NwZjQn4HIMLg">ungepodcast GirlTalks</a>. Her kan du finde afsnit, der tager
           udgangspunkt i præcis det emne, du er interesseret i.
         </p>
       </details>
