--- a/src/pages/om-os.astro
+++ b/src/pages/om-os.astro
@@ -2,6 +2,7 @@
 import BaseLayout from "../layouts/BaseLayout.astro";
 import BoxColor from "../components/ui/BoxColor.astro";
 import ColorSection from "../components/ui/ColorSection.astro";
+import Button from "../components/ui/Button.astro";
 ---
 
 <BaseLayout title="Om os">
@@ -52,7 +53,9 @@ import ColorSection from "../components/ui/ColorSection.astro";
           mens andre oplever psykiske udfordringer. Nogle kontakter os enkelte eller
           få gange, mens andre har glæde af at tale med vores rådgivere mere regelmæssigt
           over en periode.
+          <br><br> Find andre svar på spørgsmål på vores FAQ side.
         </p>
+        <Button link="faq.html" text="Gå til FAQ" style="dark" class="m-small-d-large"></Button>
       </div>
       <div class="image-container-mobile hide-desktop">
         <img
