--- a/src/pages/main.astro
+++ b/src/pages/main.astro
@@ -1,8 +1,9 @@
 ---
 import GirlsUniLayout from "../layouts/GirlsUniLayout.astro";
 import QuoteSection from "../components/ui/QuoteSection.astro";
-import BoxColorButton from "../components/ui/BoxColorButton.astro"
-import ArticleCard from "../components/cards/ArticleCard.astro"
+import BoxColorButton from "../components/ui/BoxColorButton.astro";
+import ArticleCard from "../components/cards/ArticleCard.astro";
+import Button from "../components/ui/Button.astro";
 
 ---
 <GirlsUniLayout title="Pigeunivers">
@@ -24,7 +25,11 @@ import ArticleCard from "../components/cards/ArticleCard.astro"
 	</div>
 </div>
 
+<div class="fp-quote-section">
 <QuoteSection color="pink" firstLine="Man føler sig ikke alene med de ting" secondLine="man kæmper med, når andre fortæller," thirdLine="de har det på samme måde"></QuoteSection>
+<div class="button-wrapper">
+<Button size="m-extra-small-d-medium" text="Gå til fællesskaber"></Button></div>
+</div>
 
 <BoxColorButton color="purple" title="Du er aldrig alene med dine tanker" subheader="Har du nogle tanker, du har brug for at få ud af hovedet, så de fylder mindre?" text="Skriv til brevkassen"></BoxColorButton>
 </div>
@@ -76,6 +81,13 @@ margin-bottom: 20px;
 			gap: 20px;
 		}	
 
+
+/*QUOTESECTION*/
+.fp-quote-section{
+	display:flex;
+	flex-direction: column;
+	gap: 20px;
+}
 
 	@media only screen and (min-width: 712px){
 		.medier-second-grid{
