--- a/src/pages/main.astro
+++ b/src/pages/main.astro
@@ -30,8 +30,9 @@ import Button from "../components/ui/Button.astro";
 <div class="button-wrapper">
 <Button size="m-extra-small-d-medium" text="Gå til fællesskaber"></Button></div>
 </div>
-
+<div class="BoxColorButton Center">
 <BoxColorButton size="m-extra-small-d-medium" color="purple" title="Du er aldrig alene med dine tanker" subheader="Har du nogle tanker, du har brug for at få ud af hovedet, så de fylder mindre?" text="Skriv til brevkassen"></BoxColorButton>
+</div>
 </div>
 	</GirlsUniLayout>
 	<style>
@@ -101,6 +102,10 @@ width: 100%;
 	align-self: flex-end;
 }
 
+.BoxColorButton{
+	align-self: center;
+}
+
 	@media only screen and (min-width: 712px){
 		.medier-second-grid{
 	display: grid;
@@ -113,9 +118,7 @@ width: 100%;
 
 
 
-.girls-frontpage-layout{
-	padding: 40px 140px;
-}
+
     }
 
 	@media only screen and (min-width: 1100px){
@@ -127,7 +130,14 @@ width: 100%;
 .button-wrapper{
 	padding-right: 50px;
 }
+
+.girls-frontpage-layout{
+	padding: 40px 140px;
+}
     }
+
+
+
 
 
 	</style>
