--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -69,11 +69,13 @@ import BoxColorButton from "../components/ui/BoxColorButton.astro"
 /*HERO SECTION*/
 .indexherosection{
 	padding-bottom: 40px;
+	text-align: center;
 }
 .fp-1st-hero-section{
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+	gap: 10px;
 }
 .fp-1st-hero-section img{
 	width: 100%;
@@ -180,7 +182,7 @@ gap: 20px;
 
 .indexherosection{
 			display: grid;
-			grid-template-columns: 1fr 1.5fr;
+			grid-template-columns: 0.7fr 1fr;
 			gap: 20px;
 		}
 
