--- a/src/pages/faellesskaber.astro
+++ b/src/pages/faellesskaber.astro
@@ -5,10 +5,11 @@ import Button from "../components/ui/Button.astro";
 import BoxColor from "../components/ui/BoxColor.astro";
 import ColorSection from "../components/ui/ColorSection.astro";
 import UnderlinedHeader from "../components/ui/UnderlinedHeader.astro";
+
 ---
 
 <GirlsUniLayout title="Faellesskaber">
-  <div class="Faelleskaber">
+  <div class="Faellesskaber">
     <div class="header-container">
     <section class="header">
       <div>
@@ -26,13 +27,13 @@ import UnderlinedHeader from "../components/ui/UnderlinedHeader.astro";
       <h2 class="secondary-header">Læs om vores fællesskaber</h2>
       <p class="label-text light-text">filtrér efter vores fællesskaber</p>
       <div class="filter-buttons-container">
-        <Button text="All" style="color" size="m-small-d-large" />
-        <Button text="13-16 år" style="color" size="m-small-d-large" />
-        <Button text="16-24 år" style="color" size="m-small-d-large" />
+        <Button text="All" style="color" size="m-small-d-large" extraInfo="all" />
+        <Button text="13-16 år" style="color" size="m-small-d-large" extraInfo="younger" />
+        <Button text="16-24 år" style="color" size="m-small-d-large" extraInfo="older" />
       </div>
     </div>
     <div class="color-section-components-container">
-      <ColorSection color="green" title="EmpowR" hex="#d1ff99" text="Timeld EmpowR" link="/">
+      <ColorSection extraInfo="young" color="green" title="EmpowR" hex="#d1ff99" text="Timeld EmpowR" link="/">
         <p slot="subheader" class="themeheader age-desc">For dig mellem 13-16 år</p>
         <p slot="description">
           I EmpowR mødes du med en lille gruppe piger mellem 13 og 16 år én gang om ugen i 10 uger tæt på, hvor du bor. I taler om alt det, der fylder. Det kan være venskaber, ensomhed, kærlighed og andre emner. Her vil du opdage, at der er så meget,
@@ -40,7 +41,7 @@ import UnderlinedHeader from "../components/ui/UnderlinedHeader.astro";
         </p>
         <p>To frivillige unge kvinder leder EmpowR og sørger for at det er trygt og rart at være med.</p>
       </ColorSection>
-      <ColorSection color="pink" title="Sisterhood" hex="#ffe4ee" text="Timeld Sisterhood" link="/">
+      <ColorSection extraInfo="old" color="pink" title="Sisterhood" hex="#ffe4ee" text="Timeld Sisterhood" link="/">
         <p slot="subheader" class="themeheader age-desc">For dig mellem 18-24, som er indskrevet på en uddannelse</p>
         <p slot="description">
           I EmpowR mødes du med en lille gruppe piger mellem 13 og 16 år én gang om ugen i 10 uger tæt på, hvor du bor. I taler om alt det, der fylder. Det kan være venskaber, ensomhed, kærlighed og andre emner. Her vil du opdage, at der er så meget,
@@ -48,7 +49,7 @@ import UnderlinedHeader from "../components/ui/UnderlinedHeader.astro";
         </p>
         <p slot="description">To frivillige unge kvinder leder EmpowR og sørger for at det er trygt og rart at være med.</p>
       </ColorSection>
-      <ColorSection color="purple" title="Velux" hex="#edcff8" text="Timeld Velux" link="/">
+      <ColorSection extraInfo="old" color="purple" title="Velux" hex="#edcff8" text="Timeld Velux" link="/">
         <p slot="subheader" class="themeheader age-desc">For dig mellem 18-24, som ikke er indskrevet på en uddannelse</p>
         <p slot="description">
           I EmpowR mødes du med en lille gruppe piger mellem 13 og 16 år én gang om ugen i 10 uger tæt på, hvor du bor. I taler om alt det, der fylder. Det kan være venskaber, ensomhed, kærlighed og andre emner. Her vil du opdage, at der er så meget,
@@ -57,16 +58,83 @@ import UnderlinedHeader from "../components/ui/UnderlinedHeader.astro";
         <p slot="description">To frivillige unge kvinder leder EmpowR og sørger for at det er trygt og rart at være med.</p>
       </ColorSection>
     </div>
+
+    <div class="contact-container">
+      <h2 class="secondary-header">Har du ikke fundet en gruppe til dig selv?</h2>
+      <p>I øjeblikket har vi kun fællesskabsgrupper for piger mellem 13 og 24 år. Du er velkommen til at kontakte os, hvis du mener, at der er behov for andre fællesskabsgrupper.</p>
+      <a href="mailto:info@girltalk.dk" class="subheader">info@girltalk.dk</a>
+    </div>
   </div>
 </GirlsUniLayout>
 
+<script>
+
+const filterButtons = document.querySelectorAll('a.color');
+const colorSections = document.querySelectorAll(".ColorSection")
+
+const buttonsArray = [...filterButtons];
+const colorSectionArray = [...colorSections];
+
+
+buttonsArray.forEach(element => {
+  element.addEventListener("click", () => {
+    if (buttonsArray.length) {
+      buttonsArray.forEach(btn => {
+        btn.classList.remove("selected")
+      })
+    };
+    element.classList.toggle("selected");
+    if (element.classList.contains("younger")) {
+      colorSectionArray.forEach(colorSection => {
+        if (colorSection.classList.contains("none")) {
+          colorSection.classList.remove("none")
+        };
+        if (colorSection.classList.contains("old")) {
+          colorSection.classList.add("none")
+        }
+      })
+
+    };
+    if (element.classList.contains("older")) {
+      colorSectionArray.forEach(colorSection => {
+        if (colorSection.classList.contains("none")) {
+          colorSection.classList.remove("none")
+        };
+        if (colorSection.classList.contains("young")) {
+          colorSection.classList.add("none")
+        }
+      })
+
+    };
+    if (element.classList.contains("all")) {
+      colorSectionArray.forEach(colorSection => {
+        if (colorSection.classList.contains("none")) {
+          colorSection.classList.remove("none")
+        }
+      })
+
+    };
+  } )
+});
+
+
+
+  </script>
+
+
 <style>
+
+  .Faellesskaber {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+  }
 
   .header {
     display: grid;
     align-items: center;
     max-width: 1000px;
-    margin-bottom: 90px;
   }
 
 
@@ -76,7 +144,30 @@ import UnderlinedHeader from "../components/ui/UnderlinedHeader.astro";
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 40px;
   }
+
+  .color-section-components-container {
+    gap: 40px;
+    margin-bottom: 40px;
+  }
+
+  .contact-container {
+    display: flex;
+    flex-direction: column;
+    max-width: 750px;
+    gap: 10px;
+  }
+
+  .quote-container {
+    justify-self: center;
+    margin-top: 20px;
+  }
+
+  .contact-container a {
+    align-self: center;
+  }
+
   .filter-buttons-container {
     display: flex;
     gap: 10px;
@@ -90,8 +181,6 @@ import UnderlinedHeader from "../components/ui/UnderlinedHeader.astro";
   h2 {
     margin-bottom: 10px;
   }
-
- 
 
   .age-desc {
     padding: 5px;
@@ -107,7 +196,13 @@ import UnderlinedHeader from "../components/ui/UnderlinedHeader.astro";
    .header {
     grid-template-columns: 1.3fr 1fr;
     gap: 40px;
-    
+  }
+
+  .quote-container {
+    order: -1;
+  }
+  .filters-container, .header-container {
+    margin-bottom: 90px;
   }
 }
 
