aligned text differently

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -186,12 +186,18 @@ gap: 20px;
 			gap: 20px;
 		}
 
+.fp-1st-hero-section{
+	text-align: left;
+}
 .fp-2nd-hero-section{
 	display: block;
+	width: 100%;
+	height: 100%
 }
 
 		.fp-2nd-hero-section img{
 	width: 100%;
+	object-fit: cover;
 	border-radius: 8px;
 }
 
