witdh added on boxcolor component

--- a/src/components/ui/BoxColorButton.astro
+++ b/src/components/ui/BoxColorButton.astro
@@ -17,6 +17,7 @@ const { color, subheader, text, title, link, size } = Astro.props;
   .BoxColor {
     padding: var(--spacing-xs) var(--spacing-small);
     border-radius: 15px;
+    width: 100%;
   }
 
   .text-container {
