--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,7 +36,7 @@ import BoxColorButton from "../components/ui/BoxColorButton.astro"
 	Vi står med en generation af piger, der stræber efter at være perfekte udadtil og som føler sig alene med alt det, der er svært.
 	I samarbejde med vores mange støtter og samarbejdspartnere arbejder vi for at bremse den udvikling og for at sikre, at alle piger har en at tale med.</p>
 <div class="button-wrapper">
-<Button size="m-extra-small-d-medium" text="Læs mere om os"></Button></div>
+<Button class="buttonpadding" size="m-extra-small-d-medium" text="Læs mere om os"></Button></div>
 </section>	
 <section class="bottom-section-image">
 	<img src="images/heroimages/girls-on-stairs-2.jpg" alt="Decorative image">
@@ -165,7 +165,6 @@ gap: 20px;
 
 
 @media only screen and (min-width: 900px){
-
 
 
 .indexlayout{
