corrected the logo

--- a/src/components/ui/NavPrimary.astro
+++ b/src/components/ui/NavPrimary.astro
@@ -96,11 +96,11 @@ const navLinks = [{
 .logo{
 position: absolute;
 width: 200px;
-margin: auto;
+margin:auto;
 }
 
 .logo img{
-  width: 280px;
+  width: 100%;
 }
 .search-container {
 	position: relative;
