fixed spelling on girls nav

--- a/src/components/ui/NavSecondary.astro
+++ b/src/components/ui/NavSecondary.astro
@@ -8,7 +8,7 @@ const navLinks = [{
     url: '/brevkasse',
 },
 {
-    name: 'Faelleskaber',
+    name: 'Fælleskaber',
     url: '/faellesskaber',
 },
 {
@@ -58,7 +58,7 @@ const navLinks = [{
             <ul class="nav-links">
                 <li><a href="chat.html">Chat</a></li>
                 <li><a href="brevkasse.html">Brevkasse</a></li>
-                <li><a href="faelleskaber.html">Faelleskaber</a></li>
+                <li><a href="faelleskaber.html">Fælleskaber</a></li>
                 <li><a href="medier.html">Medier</a></li>
         <li class="last-mobile-link"> <a href="index.html">GirlTalk</a></li>
         
