fixed the hamburger icon

--- a/src/components/ui/NavSecondary.astro
+++ b/src/components/ui/NavSecondary.astro
@@ -204,7 +204,7 @@ margin-left: auto;
   Hamburger
 **/
 .hamburger {
-  position: absolute;
+  position: fixed;
   top: 5em;
   right: 5%;
   margin-left: -2em;
