--- a/src/components/ui/NavPrimary.astro
+++ b/src/components/ui/NavPrimary.astro
@@ -184,7 +184,7 @@ margin:auto;
   Hamburger
 **/
 .hamburger {
-  position: absolute;
+  position: fixed;
   top: 5em;
   right: 5%;
   margin-left: -2em;
