--- a/src/pages/faellesskaber.astro
+++ b/src/pages/faellesskaber.astro
@@ -5,35 +5,34 @@ import Button from "../components/ui/Button.astro";
 import BoxColor from "../components/ui/BoxColor.astro";
 import ColorSection from "../components/ui/ColorSection.astro";
 import UnderlinedHeader from "../components/ui/UnderlinedHeader.astro";
-
 ---
 
 <GirlsUniLayout title="Faellesskaber">
   <div class="Faellesskaber">
     <div class="header-container">
-    <section class="header">
-      <div>
-      <h1 class="primary-header">Fællesskaber</h1>
-      <p class="subheader">Sammen, er vi stærkere</p>
-      <p>Vi giver dig et trygt rum med andre piger og unge kvinder, hvor vi taler om det, der fylder og styrker hinanden.</p>
-      <p>På denne her side kan du finde et gruppeforløb, som passer til lige netop dig eller du kan læse om alle vores gruppetilbud.</p>
+      <section class="header">
+        <div>
+          <h1 class="primary-header">Fællesskaber</h1>
+          <p class="subheader">Sammen, er vi stærkere</p>
+          <p>Vi giver dig et trygt rum med andre piger og unge kvinder, hvor vi taler om det, der fylder og styrker hinanden.</p>
+          <p>På denne her side kan du finde et gruppeforløb, som passer til lige netop dig eller du kan læse om alle vores gruppetilbud.</p>
+        </div>
+        <div class="quote-container">
+          <QuoteSection firstLine="Man føler sig ikke alene med de ting" secondLine="man kæmper med, når andre fortæller," thirdLine="de har det på samme måde" color="purple" />
+        </div>
+      </section>
     </div>
-      <div class="quote-container">
-        <QuoteSection firstLine="Man føler sig ikke alene med de ting" secondLine="man kæmper med, når andre fortæller," thirdLine="de har det på samme måde" color="purple" />
-      </div>
-    </section>
-  </div>
     <div class="filters-container">
       <h2 class="secondary-header">Læs om vores fællesskaber</h2>
       <p class="label-text light-text">filtrér efter vores fællesskaber</p>
       <div class="filter-buttons-container">
-        <Button text="All" style="color" size="m-small-d-large" extraInfo="all" />
-        <Button text="13-16 år" style="color" size="m-small-d-large" extraInfo="younger" />
-        <Button text="16-24 år" style="color" size="m-small-d-large" extraInfo="older" />
+        <Button text="all" style="color" size="m-small-d-large" extraInfo="all" />
+        <Button text="13-16 år" style="color" size="m-small-d-large" extraInfo="young" />
+        <Button text="16-24 år" style="color" size="m-small-d-large" extraInfo="old" />
       </div>
     </div>
     <div class="color-section-components-container">
-      <ColorSection extraInfo="young" color="green" title="EmpowR" hex="#d1ff99" text="Timeld EmpowR" link="/">
+      <ColorSection extraInfo="13-16_år" color="green" title="EmpowR" hex="#d1ff99" text="Timeld EmpowR" link="/">
         <p slot="subheader" class="themeheader age-desc">For dig mellem 13-16 år</p>
         <p slot="description">
           I EmpowR mødes du med en lille gruppe piger mellem 13 og 16 år én gang om ugen i 10 uger tæt på, hvor du bor. I taler om alt det, der fylder. Det kan være venskaber, ensomhed, kærlighed og andre emner. Her vil du opdage, at der er så meget,
@@ -41,7 +40,7 @@ import UnderlinedHeader from "../components/ui/UnderlinedHeader.astro";
         </p>
         <p>To frivillige unge kvinder leder EmpowR og sørger for at det er trygt og rart at være med.</p>
       </ColorSection>
-      <ColorSection extraInfo="old" color="pink" title="Sisterhood" hex="#ffe4ee" text="Timeld Sisterhood" link="/">
+      <ColorSection extraInfo="16-24_år" color="pink" title="Sisterhood" hex="#ffe4ee" text="Timeld Sisterhood" link="/">
         <p slot="subheader" class="themeheader age-desc">For dig mellem 18-24, som er indskrevet på en uddannelse</p>
         <p slot="description">
           I EmpowR mødes du med en lille gruppe piger mellem 13 og 16 år én gang om ugen i 10 uger tæt på, hvor du bor. I taler om alt det, der fylder. Det kan være venskaber, ensomhed, kærlighed og andre emner. Her vil du opdage, at der er så meget,
@@ -49,7 +48,7 @@ import UnderlinedHeader from "../components/ui/UnderlinedHeader.astro";
         </p>
         <p slot="description">To frivillige unge kvinder leder EmpowR og sørger for at det er trygt og rart at være med.</p>
       </ColorSection>
-      <ColorSection extraInfo="old" color="purple" title="Velux" hex="#edcff8" text="Timeld Velux" link="/">
+      <ColorSection extraInfo="16-24_år" color="purple" title="Velux" hex="#edcff8" text="Timeld Velux" link="/">
         <p slot="subheader" class="themeheader age-desc">For dig mellem 18-24, som ikke er indskrevet på en uddannelse</p>
         <p slot="description">
           I EmpowR mødes du med en lille gruppe piger mellem 13 og 16 år én gang om ugen i 10 uger tæt på, hvor du bor. I taler om alt det, der fylder. Det kan være venskaber, ensomhed, kærlighed og andre emner. Her vil du opdage, at der er så meget,
@@ -68,67 +67,44 @@ import UnderlinedHeader from "../components/ui/UnderlinedHeader.astro";
 </GirlsUniLayout>
 
 <script>
+  const filterButtons = document.querySelectorAll("a.color");
+  const colorSections = document.querySelectorAll(".ColorSection");
 
-const filterButtons = document.querySelectorAll('a.color');
-const colorSections = document.querySelectorAll(".ColorSection")
+  const buttonsArray = [...filterButtons];
+  const colorSectionArray = [...colorSections];
 
-const buttonsArray = [...filterButtons];
-const colorSectionArray = [...colorSections];
+  buttonsArray.forEach((element) => {
+    element.addEventListener("click", () => {
+      if (buttonsArray.length) {
+        buttonsArray.forEach((btn) => {
+          btn.classList.remove("selected");
+        });
+      }
 
+      if (colorSectionArray.length) {
+        colorSectionArray.forEach((colorSection) => {
+          if (colorSection.classList.contains("none")) {
+            colorSection.classList.remove("none");
+          }
+        });
+      }
 
-buttonsArray.forEach(element => {
-  element.addEventListener("click", () => {
-    if (buttonsArray.length) {
-      buttonsArray.forEach(btn => {
-        btn.classList.remove("selected")
-      })
-    };
-    element.classList.toggle("selected");
-    if (element.classList.contains("younger")) {
-      colorSectionArray.forEach(colorSection => {
-        if (colorSection.classList.contains("none")) {
-          colorSection.classList.remove("none")
-        };
-        if (colorSection.classList.contains("old")) {
-          colorSection.classList.add("none")
+      element.classList.toggle("selected");
+
+      colorSectionArray.forEach((colorSection) => {
+        if (!colorSection.classList.contains(element.textContent.toLowerCase().replace(/\s/, "_"))) {
+          colorSection.classList.add("none");
         }
-      })
-
-    };
-    if (element.classList.contains("older")) {
-      colorSectionArray.forEach(colorSection => {
-        if (colorSection.classList.contains("none")) {
-          colorSection.classList.remove("none")
-        };
-        if (colorSection.classList.contains("young")) {
-          colorSection.classList.add("none")
-        }
-      })
-
-    };
-    if (element.classList.contains("all")) {
-      colorSectionArray.forEach(colorSection => {
-        if (colorSection.classList.contains("none")) {
-          colorSection.classList.remove("none")
-        }
-      })
-
-    };
-  } )
-});
-
-
-
-  </script>
-
+      });
+    });
+  });
+</script>
 
 <style>
-
   .Faellesskaber {
     display: flex;
     flex-direction: column;
     align-items: center;
-
   }
 
   .header {
@@ -137,9 +113,9 @@ buttonsArray.forEach(element => {
     max-width: 1000px;
   }
 
-
   .color-section-components-container,
-  .filters-container, .header-container {
+  .filters-container,
+  .header-container {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -193,17 +169,17 @@ buttonsArray.forEach(element => {
   }
 
   @media only screen and (min-width: 600px) {
-   .header {
-    grid-template-columns: 1.3fr 1fr;
-    gap: 40px;
-  }
+    .header {
+      grid-template-columns: 1.3fr 1fr;
+      gap: 40px;
+    }
 
-  .quote-container {
-    order: -1;
+    .quote-container {
+      order: -1;
+    }
+    .filters-container,
+    .header-container {
+      margin-bottom: 90px;
+    }
   }
-  .filters-container, .header-container {
-    margin-bottom: 90px;
-  }
-}
-
 </style>
