--- a/src/components/ui/ColorSection.astro
+++ b/src/components/ui/ColorSection.astro
@@ -5,7 +5,7 @@ const { extraInfo, link, text, size = "m-small-d-large" } = Astro.props;
 ---
 
 
-  <section class:list={["ColorSection", extraInfo]}>
+  <section class:list={["ColorSection", "all", extraInfo]}>
     <div class="flex-container">
     <section class="headline">
         <h2 class="secondary-header">{title}</h2>
